agregadas observaciones de usuario

--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -189,7 +189,7 @@
     if ([[${msg}]] === 1){
     swal({
     title: "ERROR!",
-            text: "Ocurrio un error en el proceso",
+            text: "El numero de nit ya existe",
             type: "error",
             icon: "error"
     });
