--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -40,7 +40,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${usuario.codigousuario}">Codigo</td>
                 <td th:text="${usuario.nombreusuario}">Nombre</td>
                 <td th:text="${usuario.controlcontrasenia}">control</td>
-                <td th:text="${usuario.estadousuario}">Estado</td>
+                <td th:text="${usuario.estadousuario}?'ACTIVO':'INACTIVO'">Estado</td>
                 <td th:text="${#calendars.format(usuario.fechaingreso, 'dd/MM/yyyy')}">Fecha Desde</td>
                 <td th:text="${#calendars.format(usuario.fechacaducidad, 'dd/MM/yyyy')}">Fecha de caducidad</td>
                 <td th:text="${#calendars.format(usuario.fechabaja, 'dd/MM/yyyy')}">Fecha de baja</td>
