--- a/src/main/resources/templates/fragments/usuario/usuarioshow.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioshow.html
@@ -16,64 +16,55 @@
         <div>
             <form class="form-horizontal">
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Codigo:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Codigo:</label>
+                    <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.codigousuario}">Usuario Id</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Usuario:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Usuario:</label>
+                    <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.nombreusuario}">Nombre</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre Completo:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Nombre Completo:</label>
+                    <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.nombrecompleto}">Nombre</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Contraseña:</label>
-                    <div class="col-sm-10">
+                    <label class="col-sm-4 control-label">Contraseña:</label>
+                    <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.contraseniausuario}">contraseña</p>
                     </div>
                 </div>
-                <!--div class="form-group">
-                    <label class="col-sm-2 control-label">control contraseña:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${usuario.controlcontrasenia}">control pass</p>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Roles asignados a usuario:</label>
+                    <div class="col-sm-8">
+                        <p class="form-control-static" th:text="${roleslist}">roles</p>
                     </div>
-                </div-->
-                <div th:if="${usuario.estadousuario==1}" class="form-group">
-                    <label class="col-sm-2 control-label">Estado:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" >activo</p>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Fecha de Ingreso :</label>
+                    <div class="col-sm-8">
+                        <p class="form-control-static" th:text="${#calendars.format(usuario.fechaingreso, 'dd/MM/yyyy')}">fecha ingreso</p>
                     </div>
+                </div>
+            
+                <div class="form-group">
+                    <label class="col-sm-4 control-label">Estado:</label>
+                    <div class="col-sm-8">
+                        <p class="form-control-static" th:text="${usuario.estadousuario}?'ACTIVO':'INACTIVO'"></p>
+                    </div>
+    
                 </div>
                 <div th:if="${usuario.estadousuario==0}" class="form-group">
-                    <label class="col-sm-2 control-label">Estado:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${usuario.estadousuario}">inactivo</p>
+                    <label class="col-sm-4 control-label">Fecha de Baja:</label>
+                    <div class="col-sm-8">
+                        <p class="form-control-static" th:text="${#calendars.format(usuario.fechabaja, 'dd/MM/yyyy')}">fecha de baja</p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Ingreso :</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${usuario.fechaingreso}">fecha ingreso</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Caducidad:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${usuario.fechacaducidad}">fecha de caducidad</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha de Baja:</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${usuario.fechabaja}">fecha de baja</p>
-                    </div>
-                </div>
+    
             </form>
                     <div class="col-md-12">
             <div class="row" align="center">
