observaciones misiones armi

--- a/src/main/resources/templates/fragments/mision/misionform.html
+++ b/src/main/resources/templates/fragments/mision/misionform.html
@@ -35,7 +35,7 @@
 }
  </style>
      
-    <title>SISADMRH-Crear Mision</title>
+    <title>SISADMRH-Crear Misi&oacute;n</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
@@ -305,14 +305,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div>
                   
                    <div class="form-group">
-                <label class="col-sm-3 control-label">Cantidad de Dias(*):</label>
+                <label class="col-sm-3 control-label">Cantidad de D&#237;as(*):</label>
                 <div class="col-sm-2">
                     <input type="number" class="form-control numeros" id="n13" required="true" maxlength="3" th:field="*{cantidaddia}"/>
                 </div>
                 <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup169')" onmouseout ="javascript:ocultarAyuda('poppup169')">a</a></b>
                         
-                        <span class="popuptext" id="poppup169">Ingrese el Numero de dias que durara la Misión solo se admitiran 20 caracteres numericos.!</span>
+                        <span class="popuptext" id="poppup169">Ingrese el N&#250;mero de dias que durara la Misión solo se admitiran 20 caracteres numericos.!</span>
                     </div>
                 
                 
