--- a/src/main/resources/templates/fragments/mision/misionshow.html
+++ b/src/main/resources/templates/fragments/mision/misionshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>SISADMRH-Consulta de Datos de Mision</title>
+    <title>SISADMRH-Consulta de Datos de Misi&oacute;n</title>
      <th:block th:include="../templates/header"></th:block>
  
 
@@ -35,13 +35,13 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <p class="form-control-static" th:text="${mision.codigomision}">codigo de Mision</p></div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-5 control-label">Nombre de Misión:</label>
+                    <label class="col-sm-5 control-label">Nombre de Misi&oacute;n:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${mision.nombremision}">Nombre de Mision</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-5 control-label">Objetivo de Misión:</label>
+                    <label class="col-sm-5 control-label">Objetivo de Misi&oacute;n:</label>
                     <div class="col-sm-7">
                         <p class="form-control-static" th:text="${mision.objetivomision}">Objetivo de Mision</p>
                     </div>
