--- a/src/main/resources/templates/fragments/usuario/usuarioformedit.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioformedit.html
@@ -16,9 +16,29 @@
             </div>
             <br>
             <div>
-                <form id ="usuarioform" class="form-horizontal" th:object="${usuario}" th:action="${msg==1?'../usuarios/usuario':'../usuario'}" method="post" >
+                <form id ="usuarioform" class="form-horizontal" th:object="${usuario}" th:action="@{../usuarioedit}" method="post" >
                     <h3>Introduzca los datos del Usuario</h3>
                     <input type="hidden" th:field="*{codigousuario}"/>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Nombres:</label>
+                        <div class="col-sm-6">
+                            <input type="text" readonly class="form-control letras" required="true" size="100" maxlength="50" th:field="*{codigousuario}" />
+                        </div>
+                        <div class="popup col-sm-1"><b>
+                                <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
+                            <span class="popuptext" id="nomUser">Ingrese los Nombres del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Usuario:</label>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombreusuario}" />
+                        </div>
+                        <div class="popup col-sm-1"><b>
+                                <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
+                            <span class="popuptext" id="nomUser">Ingrese los apellidos del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Nombres:</label>
                         <div class="col-sm-6">
@@ -29,20 +49,11 @@
                             <span class="popuptext" id="nomUser">Ingrese los Nombres del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">Apellidos:</label>
-                        <div class="col-sm-6">
-                            <input type="text" class="form-control letras" required="true" size="100" maxlength="50" th:field="*{nombreusuario}" />
-                        </div>
-                        <div class="popup col-sm-1"><b>
-                                <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('nomUser')" onmouseout ="javascript:ocultarAyuda('nomUser')">a</a></b>
-                            <span class="popuptext" id="nomUser">Ingrese los apellidos del Usuario. Solo es permitido digitos 50 caracteres. !!</span>
-                        </div>
-                    </div>
+                    
                     <div class="form-group">
                         <label class="col-sm-2 control-label">DUI:</label>
                         <div class="col-sm-6">
-                            <input type="text" id="duius" name="duiuser" class="form-control numeros" required="true" size="100" maxlength="9" th:field="${usuario.dui}" />
+                            <input type="text" id="duius" name="duiuser" readonly class="form-control numeros" required="true" size="100" maxlength="9" th:field="${usuario.dui}" />
                         </div>
                         <div class="popup col-sm-1"><b>
                                 <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('dui')" onmouseout ="javascript:ocultarAyuda('dui')">a</a></b>
